--- a/css/compose.css
+++ b/css/compose.css
@@ -7,3 +7,13 @@
 	height: 50px;
 	width: 50px;
 }
+
+.note:hover {
+	background-color: gray;
+}
+
+.syllable{
+	height: 50px;
+	width: 50px;
+	text-align: center;
+}
