--- a/css/compose.css
+++ b/css/compose.css
@@ -2,10 +2,17 @@
 	background-color: orange;
 }
 
+.column{
+	height: 390px; 
+	width:50px;
+	display: inline-block;
+}
+
 .note{
-	border: 1px solid;
+	border: 0.3px solid;
 	height: 50px;
 	width: 50px;
+	border-color: #b1b1b1;
 }
 
 .note:hover {
