--- a/css/gallery.css
+++ b/css/gallery.css
@@ -6,21 +6,17 @@
 	padding: 14px;
 }
 
-.outBox{
-	padding: 14px; 
-	height: 375px; 
-	width: 300px; 
-	display: inline-block;
-}
-
 .inBox{
-	height: 100%; 
-	width: 100%; 
+	height: 375px;
+	width: 270px;
 	background-color: #f1f1f1;
 	border-radius: 8px;
 	box-shadow: 5px 5px 5px #888888;
 	text-align: center;
 	padding: 15px;
+	margin: 14px;
+	display: inline-block;
+	vertical-align: top;
 }
 
 .imgFrame{
