--- a/css/gallery.css
+++ b/css/gallery.css
@@ -9,7 +9,8 @@
 .inBox{
 	height: 375px;
 	width: 270px;
-	background-color: #f1f1f1;
+	border: 1px solid;
+	border-color: #d1d1d1;
 	border-radius: 8px;
 	box-shadow: 5px 5px 5px #888888;
 	text-align: center;
