--- a/css/songInfo.css
+++ b/css/songInfo.css
@@ -6,6 +6,10 @@
 	height: 100px;
 }
 
+.songEntry:hover{
+	background-color: #d8d8d8;
+}
+
 .songImage{
 	float: left; 
 	object-fit: cover; 
@@ -19,4 +23,54 @@
 	width: 50%; 
 	height: 100px; 
 	overflow: hidden;
+}
+
+.lyric-box{
+	padding: 8px; 
+	width: 100%; 
+	height: 300px; 
+	overflow: auto; 
+	background-color: #efefef;
+}
+
+.song-list{
+	width: 100%; 
+	height: 550px; 
+	overflow: auto; 
+	background-color: #efefef;
+}
+
+.song-list-outer{
+	border: 2px solid;
+	border-color: #ffff68;
+	background-color: white;
+}
+
+.album-cover{
+  width: 300px; 
+  height: 300px; 
+  object-fit: cover;
+  border: 2px solid;
+  border-color: #ffff84;
+}
+
+.album-back{
+  width: 100%; 
+  height: 200px;
+  object-fit: cover; 
+  position: absolute; 
+  opacity: 0.6; 
+  z-index: -1;
+  filter: brightness(50%);
+}
+
+.comment-box{
+	width: 100%;
+}
+
+.add-comment{
+	width: 100%;
+	height: 50px;
+	background-color: #e1e1e1;
+	border-radius: 5px;
 }
