--- a/css/songInfo.css
+++ b/css/songInfo.css
@@ -4,6 +4,7 @@
 	border-color: #b1b1b1; 
 	width: 95%;
 	height: 100px;
+	cursor: pointer;
 }
 
 .songEntry:hover{
@@ -57,6 +58,7 @@
 
 .sort-tag{
 	padding: 8px;
+	font-size: 14px;
 }
 
 .album-cover{
