--- a/css/compose.css
+++ b/css/compose.css
@@ -38,10 +38,11 @@
 .album-back{
 	position: absolute; 
 	width: 100%; 
-	height: 220px; 
+	height: 230px;
+	height: 100%;
 	object-fit: cover; 
 	opacity: 0.6;
-	filter: brightness(50%);
+	filter: brightness(40%);
 }
 
 .album-pic{
@@ -56,4 +57,50 @@
 	width: 30px; 
 	height: 410px; 
 	position: absolute; 
+}
+
+.compose-infoBox{
+	background-color: black;
+	width: 73%;
+	display: inline-block; 
+	vertical-align: top;
+}
+
+.compose-title{
+	font-size: 24px;
+	font-weight: bold;
+	color: #ffff84;
+	padding-top: 10px;
+	padding-right: 10px;
+	padding-left: 10px;
+}
+
+.compose-subbox{
+	border: 1px solid;
+	border-color: white;
+	border-radius: 10px;
+	padding: 10px;
+	margin: 10px;
+}
+
+.compose-info{
+	color: white;
+}
+
+.compose-desc{
+	height: 150px;
+	padding: 10px;
+	overflow: auto;
+	color: white;
+}
+
+.compose-tr{
+	width: 100%;
+}
+
+.compose-td{
+	width: 33%;
+	color: white;
+	font-size: 12px;
+	text-align: center;
 }
